# mcp-test

./: .flake8  .gitignore  LINTING_SETUP.md  Makefile  README.md  pyproject.toml  pyrightconfig.json  server.py  tests.py  tips_categories.json
.github/workflows/: ci.yml  test.yml
docs/: externalization-plan.md  llm.txt  migration-completion-summary.md  prompts-migration-plan.md
scripts/: README.md  fix-lint.sh  lint.sh
src/: __init__.py  client.py  server.py  utils.py
src/content/: __init__.py  content_manager.py
src/data/: content.json  content_schema.json
src/prompts/: __init__.py  development_prompts.py  learning_prompts.py  planning_prompts.py  prompt_loader.py  prompt_registry.py  prompts.py  validator.py
src/resources/: __init__.py  tips_resources.py
src/tools/: __init__.py  greeting_tools.py  time_tools.py  tips_tools.py
tests/: test_consolidated_prompts.py  test_content_manager.py  test_dynamic_configurations.py  test_enhanced_content.py  test_greeting_integration.py  test_integration_complete.py  test_json_loading.py  test_prompt_migration.py  test_prompt_simplification.py  test_prompts.py  test_resources.py  test_schema_validation.py  test_tips_integration.py  test_tools.py  test_utils_externalization.py  tests.py
tests/data/: tips_categories_no_mcp.json
