[project]
name = "mcp-test"
version = "0.2.0"
description = "MCP Test Server - A simple demonstration server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.4.1",
    "jsonschema>=4.17.0",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=23.0",
    "flake8>=5.0",
    "mypy>=1.0",
]

[dependency-groups]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=23.0",
    "flake8>=5.0",
    "mypy>=1.0",
    "isort>=6.0.1",
    "autopep8>=2.3.2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
package-dir = {"src" = "src"}

[tool.setuptools.package-data]
"src" = ["*.py"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
    "tests.py",
]
pythonpath = [
    "src"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "test_*.py",
    "*_test.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
